--- a/装饰器模式/说明.md
+++ b/装饰器模式/说明.md
@@ -1,1 +1,8 @@
 # 装饰器模式(Decorator)
+
+## 说明
+Circle（圆形类）和Rectangular(方形类)需要实现IShape接口只是因为这两个类都是Shape，有共同的能力Draw。
+
+ShapeDecorator(形状装饰器类)需要继承IShape接口的原因是为了由他派生的各种具体的一系列的装饰器能够互相装饰。
+
+比如：Circel被RedShapeDecorator类装饰后，RedShapeDecorator类还能被BorderShapeDecorator类装饰。
